--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,11 @@
     	<artifactId>jackson-databind</artifactId>
     	<version>2.11.0.rc1</version>
 	</dependency>
+	<dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>8.0.11</version>
+	</dependency>
   </dependencies>
   <build>
     <sourceDirectory>src</sourceDirectory>
